[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.30.1]]
==== 1.30.1 - YYYY/MM/DD

[float]
===== Bug fixes
* Fixed AWS Lambda instrumentation for AWS handler classes with input object types that are not AWS Events classes  - {pull}2551[#2551]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.30.0]]
==== 1.30.0 - 2022/03/22

[float]
===== Potentially breaking changes
* Create the JDBC spans as exit spans- {pull}2484[#2484]
* WebSocket requests are now captured with transaction type request instead of custom - {pull}2501[#2501]

[float]
===== Refactorings
* Logging frameworks instrumentations - {pull}2428[#2428]. This refactoring includes:
** Log correlation now works based on bytecode instrumentation rather than `ActivationListener` that directly updates the MDC
** Merging the different instrumentations (log-correlation, error-capturing and ECS-reformatting) into a single plugin
** Module structure and package naming changes

[float]
===== Features
* Added support for setting service name and version for a transaction via the public api - {pull}2451[#2451]
* Added support for en-/disabling each public annotation on each own - {pull}2472[#2472]
* Added support for compressing spans - {pull}2477[#2477]
* Added microsecond durations with `us` as unit - {pull}2496[#2496]
* Added support for dropping fast exit spans - {pull}2491[#2491]
* Added support for collecting statistics about dropped exit spans - {pull}2505[#2505]
* Making AWS Lambda instrumentation GA - includes some changes in Lambda transaction metadata fields and a dedicated flush HTTP request
to the AWS Lambda extension - {pull}2424[#2424]
* Changed logging correlation to be on by default. This change includes the removal of the now redundant `enable_log_correlation` config