@@ -24,14 +24,9 @@ import net.bytebuddy.asm.Advice;
 
 import javax.annotation.Nullable;
 
-public abstract class JakartaServletVersionInstrumentation extends ServletVersionInstrumentation {
+public abstract class JakartaServletVersionInstrumentation {
 
-    @Override
-    public Constants.ServletImpl getImplConstants() {
-        return Constants.ServletImpl.JAKARTA;
-    }
-
-    public static class JakartaInit extends Init {
+    public static class JakartaInit extends ServletVersionInstrumentation.Init {
 
         @Override
         public Constants.ServletImpl getImplConstants() {
@@ -48,7 +43,7 @@ public abstract class JakartaServletVersionInstrumentation extends ServletVersio
 
     }
 
-    public static class JakartaService extends Service {
+    public static class JakartaService extends ServletVersionInstrumentation.Service {
 
         @Override
         public Constants.ServletImpl getImplConstants() {
@@ -61,7 +56,5 @@ public abstract class JakartaServletVersionInstrumentation extends ServletVersio
                 logServletVersion(JakartaUtil.getInfoFromServletContext(servlet.getServletConfig()));
             }
         }
-
     }
-
 }
