@@ -26,6 +26,8 @@ endif::[]
 [float]
 ===== Bug fixes
 * Fixed AWS Lambda instrumentation for AWS handler classes with input object types that are not AWS Events classes  - {pull}2551[#2551]
+* Fixed service name discovery based on MANIFEST.MF file through `ServletContainerInitializer#onStartup` on Jakarta Servlet containers -
+{pull}2546[#2546]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
